# dotfiles

./: .bashrc  .gitignore  .tmux.conf  .vimrc  AGENTS.md  After install  README.md  config.vim  init.toml  package-lock.json  package.json  qa-todo.md  robot  setup.sh  tags  tmux.conf  vimrc
.opencode/: package-lock.json
.opencode/context/: config.jsonc
.opencode/plugin/: context-manager.ts  ralph-loop.ts
.sisyphus/drafts/: deep-research-skill-update-plan.md
KONICAMINOLTA_PRINTER/: KONICA MINOLTA C280 DRIVER
byterover/: README.md  setup.sh
changes/: AGENTS.md
changes/create-agent-system/: design.md  proposal.md  tasks.md
changes/enforce-todo-in-graph/: design.md  proposal.md  tasks.md
changes/enforce-todo-workflow/: design.md  proposal.md  tasks.md
changes/fix-tasks-inprogress-bug-and-session-completion-check/: ARCHIVE.md  design.md  proposal.md  tasks.md
changes/refactor-agent-template/: design.md  proposal.md  tasks.md
changes/refactor-all-agents-with-guidelines/: design.md  proposal.md  tasks.md
changes/standardize-agents/: design.md  proposal.md  tasks.md
changes/tasks-plugin-batch-operations/: design.md  proposal.md  tasks.md
changes/unify-tasks-tool-and-session-isolation/: design.md  proposal.md  tasks.md
changes/update-subagent-task-management/: design.md  proposal.md  tasks.md
data/memory/: openmemory.db  openmemory.toml  working_memory.json
docs/: docker설치  vim플러그인설정
docs/rtabmap/: odom_config
fzf/: AGENTS.md  setup.sh
gemini-cli/: AGENTS.md  install-task-master.sh  settings.json  setup.sh
kvaser/: README.txt
lazyvim/: AGENTS.md  backup-nvim-config.sh  grep-nvim-config.sh  install-d2coding-nerd-font.sh  install-deps.sh  install-lazyvim.sh  install-nvim-config.sh  install-nvim.sh  lazyvim.json  setup.sh
lazyvim/nvim/: lazy-lock.json  lazyvim.json
lazyvim/nvim-termux/: lazy-lock.json
open-notebook/: compose.yaml  setup.sh
openchamber/: install-service.sh  install.sh  setup.sh
opencode/: AGENTS.md  backup-config.sh  install-config.sh  install.sh  install_agents.sh  setup.sh  update-oc.sh
opencode/config/: AGENTS.md  agent-template.md  oh-my-opencode.json  opencode.json  ralph-loop.json  rate-limit-fallback.json  requirements.txt
opencode/config/libs/opencode-memory/: README.md  pyproject.toml
opencode/config/libs/opencode-memory/src/opencode_memory/: __init__.py  context_manager.py  context_memory.py  server.py  server_state.py  working_memory.py
opencode/config/libs/opencode-memory/src/opencode_memory/utils/: llm.py  logging.py
openspec/: AGENTS.md  project.md
ros/: setup.sh
ros/rviz/: rtabmap.rviz  rtabmap_odom.rviz
tailscale/: AGENTS.md  install.sh  setup.sh
temp/: Speak.py  base_global_planner_params.yaml  dwa_local_planner_params.yaml  ekf_params.yaml  goal_control.cpp  goal_control_class.cpp  goals.yaml  kinect_launch.tar  msg.tar  robot_slam.launch  setPoseBridge.cpp  turtlebot3_kinect.launch  turtlebot3_kinect2_combined.launch  turtlebot3_navigation.tar  turtlebot3_waffle_kinect.urdf.xacro  turtlebot3_zed.launch
temp/newstate/: BashCommand.py  DisplayVideo.py  PublishCmdvel.py  PublishString.py  Speak.py
temp/params/: .base_local_planner_params.yaml.swo  .base_local_planner_params.yaml.swp  .costmap_common_params.yaml.swo  .costmap_common_params.yaml.swp  .dwa_local_planner_params.yaml.swo  (+21 more)
termux/: AGENTS.md  install_d2coding_nerd_font.sh  setup.sh  termux-ubuntu-setup
tmux/: AGENTS.md  setup.sh  tmux.conf
today/: make_today.sh  register_systemd.sh  setup.sh
vibe-kanban/: config-template.sh  config-template.yaml  install-service.sh  install.sh  setup.sh  vibe-kanban-service.sh  vibe-kanban-wrapper.sh  vk-binary.sh  vk-direct.sh  vk-final.sh  vk-runner.sh
vim/: config.vim  init.toml  setup.sh  vimrc
vimplug/: AGENTS.md  setup.sh  vimrc
wezterm/: AGENTS.md  setup.sh
(+413 files in other folders)
